# ORBIT

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.bib  LICENSE  README.md  README.rst  contents.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: gh_pages.yml  pre-commit.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  tests.yml
ORBIT/: __init__.py  config.py  manager.py  parametric.py  supply_chain.py
ORBIT/core/: __init__.py  components.py  environment.py  exceptions.py  library.py  port.py  supply_chain.py  vessel.py
ORBIT/core/defaults/: __init__.py  common_costs.yaml
ORBIT/core/logic/: __init__.py  vessel_logic.py
ORBIT/phases/: __init__.py  base.py
ORBIT/phases/design/: __init__.py  _cables.py  array_system_design.py  design_phase.py  electrical_export.py  export_system_design.py  monopile_design.py  mooring_system_design.py  oss_design.py  oss_design_floating.py  scour_protection_design.py  semi_submersible_design.py  spar_design.py
ORBIT/phases/install/: __init__.py  install_phase.py
_sources/source/: changelog.rst.txt
docs/: CONTRIBUTING.md  _config.yml  _toc.yml  build_book.sh  changelog.md  clean_notebook.py  index.md  index.rst  publications.rst  refs.bib  team.md
docs/about/: changelog.md  publications.md  team.md
docs/api/: ParametricManager.md
docs/examples/: index.md
docs/getting_started/: install.md  overview.md
docs/methods/: CommonCost.md  DesignPhase.md  InstallPhase.md  ParametricManager.md  ProjectManager.md
docs/methods/design/: ArraySystemDesign.md  CableHelpers.md  ElectricalDesign.md  ExportSystemDesign.md  MonopileDesign.md  MooringSystemDesign.md  OffshoreSubstationDesign.md  (+3 more)
docs/source/: changelog.md  changelog.rst  examples.md  examples.rst  team.rst
docs/topical_guides/: cable_installation.md  cost_curves.md  custom_array.md  export_cable_system.md  fixed_bottom_installations.md  index.md  supply_chains.md
docs/tutorial/: available_outputs.md  index.md  project_manager.md
docs/tutorials/: available_outputs.md  index.md  introduction.md  parametric_manager.md  project_manager.md
examples/: Example - Custom Array Layout.ipynb  Untitled.ipynb  available_outputs.ipynb  cable_installation.ipynb  cost_curves.ipynb  custom_array.ipynb  export_cable_system.ipynb  fixed_bottom_installations.ipynb  introduction.ipynb  parametric_manager.ipynb  project_manager.ipynb  supply_chains.ipynb
examples/configs/: example_fixed_project.yaml  example_floating_project.yaml  example_gravity-based_project.yaml  example_gravity_based_project.yaml  example_separate_monopile_turbine_vessel.yaml  nrwal.yaml
misc/: supply_chain_plots.py
source/: api.html  api_DesignPhase.html  api_InstallPhase.html  api_ParametricManager.html  api_ProjectManager.html  changelog.html  doc_CommonCost.html  doc_DesignPhase.html  doc_InstallPhase.html  doc_ParametricManager.html  doc_ProjectManager.html  examples.html  methods.html  team.html
source/installation/: index.html
source/intro/: bos.html  index.html  overview.html
source/publications/: index.html
source/tutorial/: available_outputs.html  define_vessels.html  design_phases.html  index.html  load_config.html  parametric_manager.html  phase_specific.html  project_manager.html  start_dates.html
templates/: design_module.py
tests/: __init__.py  test_config_management.py  test_design_install_phase_interactions.py  test_parametric.py  test_project_manager.py
tests/core/: test_components.py  test_environment.py  test_library.py  test_port.py  test_vessel.py
tests/data/: __init__.py
tests/phases/: __init__.py  test_base.py
(+218 files in other folders)
